[package]
name = "minicryptolab"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
ecdsa = { version = "0.16", features = ["der", "pkcs8"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.9"
aes = "0.8"
block-modes = "0.9"
rsa = "0.9"




